fixed input box alignment and updated style sheet

--- a/styles/journal.css
+++ b/styles/journal.css
@@ -1,10 +1,25 @@
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+body{
+    background-image: url(http://bommaritofineart.com/wp-content/uploads/2016/12/A-Moment-of-Zen.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: #19eb23;
+    text-shadow: 1px 2px rgb(4, 22, 5);
 }
 
+form{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    color: #19eb23;
+    text-shadow: 1px 2px rgb(4, 22, 5);
+}
 
+#journalDate, #journalEntry, #journalConcepts, #current-mood{
+    display: flex;
+    flex-flow: column wrap;
+    align-self: left;
+}
 
 label {
     font-family: "Fira Sans", sans-serif;
